# Ingot

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Directory.Build.props  Ingot.sln  README.en.md  README.md  SECURITY.md  docker-compose.app.yml  docker-compose.events.yml  package-lock.json
.github/: dependabot.yml
deploy/: README.md  compose.yml  deploy.sh  install-docker-ubuntu.sh  nginx-static.conf
desktop/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: Ingot-optical-molding-system-design.docx  Ingot-tooling-assembly-system-design.docx  acquisition.en.md  acquisition.md  architecture.en.md  architecture.md  brand.en.md  brand.md  capability-ladder.en.md  capability-ladder.md  chat.en.md  chat.md  code-structure.md  configuration-maintenance-closure.en.md  configuration-maintenance-closure.md  design.en.md  design.md  desktop-agent.en.md  desktop-agent.md  faq.en.md  faq.md  hsl-drivers.en.md  hsl-drivers.md  index.en.md  index.md  manufacturing-context.en.md  manufacturing-context.md  modules.en.md  modules.md  open-source-dependencies.en.md  open-source-dependencies.md  process-configuration.en.md  process-configuration.md  product-information-architecture.en.md  product-language.en.md  (+13 more)
docs-site/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
(+690 files in other folders)
